# AutoSRE

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py
dashboard/static/: login.html  service.html  services.html
scripts/: README.md  cloudformation-aws-demo.yaml
src/autosre/: __init__.py  cli.py  config.py  models.py  workflow.py
src/autosre/incident_detection/: __init__.py  cloudwatch.py  simulator.py
src/autosre/log_storage/: __init__.py  cloudwatch_logs.py  store.py
src/autosre/planner/: __init__.py  agent.py
src/autosre/reasoning_agent/: __init__.py  agent.py  prompts.py
src/autosre/recovery_verification/: __init__.py  monitor.py
src/autosre/remediation/: __init__.py  aws_executor.py
src/autosre/slack_reporter/: __init__.py  reporter.py
src/autosre/ui_automation/: __init__.py  agent.py  prompts.py
tests/: __init__.py  test_dashboard.py  test_log_storage.py  test_reasoning_agent.py  test_recovery_verification.py  test_slack_reporter.py  test_ui_automation.py  test_workflow.py
